--- a/style.css
+++ b/style.css
@@ -488,7 +488,7 @@ aside[class=aside] {
   -webkit-animation: flecha 1s ease-in-out infinite;
 }
 
-@keyframes flecha {
+@keyframes flecha{
   0% {
     scale: 1;
   }
@@ -507,7 +507,7 @@ aside[class=aside] {
 
 /* Pantalla dividida izquierda*/
 
-.dividida__left {
+.dividida__left{
   grid-area: divLeft;
   height: 100%;
   background-image: url(img/nosotros\ \(600x400px\).jpg);
@@ -1347,8 +1347,6 @@ aside[class=aside] {
   width: 65%;
   height: 45vh;
   padding: 10px;
-
-
   border-radius: 18px;
   background: white;
   box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
@@ -1394,29 +1392,25 @@ aside[class=aside] {
 .swiper-texto p {
   width: 90%;
   margin: 0 auto;
-  font-size: 13px;
-  margin-top: 10px;
+  font-size: 14px;
+  margin-top: 16px;
   text-align: justify;
+  font-family: 'Cardo', serif;
 
 }
-
-
 
 .swiper-texto img {
   width: 150px;
   height: 150px;
-  margin: 0 auto;
   object-fit: cover;
   border-radius: 50%;
   border: 5px solid white;
   z-index: 9;
   position: absolute;
   top: 80px;
-  left: 44%;
- 
+  left: 50%;
+  margin-left: -75px;
 }
-
-
 
 /*Galeria*/
 .galeria {
@@ -2390,7 +2384,7 @@ section .map {
 
   .swiper {
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     grid-area: testimonios;
    
 
@@ -2455,8 +2449,6 @@ section .map {
     z-index: 1;
     position: absolute;
     top: 0;
-
-
   }
 
   .swiper-texto h2 {
@@ -2466,30 +2458,25 @@ section .map {
     color: black;
   }
 
-
-
   .swiper-texto p {
     width: 90%;
     margin: 0 auto;
     font-size: 15px;
     margin-top: 10px;
     text-align: justify;
-
   }
 
-
-
   .swiper-texto img {
-    width: 100px;
-    height: 100px;
-    margin: auto;
+    width: 120px;
+    height: 120px;
     object-fit: cover;
     border-radius: 50%;
     z-index: 9;
     position: absolute;
-    top: 0px;
-    left: 35%;
-    right: 50%;
+    top: 120px;
+    left: 50%;
+    margin-left: -60px;
+  
   }
 
 
@@ -2723,7 +2710,6 @@ section .map {
     color: white;
     margin: 0 auto;
   }
-
 }
 
 @media only screen and (max-width: 450px) {
