--- a/style.css
+++ b/style.css
@@ -257,11 +257,11 @@ aside[class=aside] {
 .main {
   width: 100%;
   height: 600px;
-  background: url('img/pastor\ javier\ corsi.jpg');
+  background: url('img/pastor\ javier\ corsi\ dos.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: -140px;
-  background-position-y: 1em;
+  background-position-y: 5em;
   background-attachment: fixed;
   grid-area: main;
   position: relative;
@@ -281,7 +281,7 @@ aside[class=aside] {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(0, 0, 0, .6);
   z-index: 0;
 }
 
@@ -776,7 +776,7 @@ aside[class=aside] {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 18;
   line-clamp: 18; */
- 
+
 }
 
 .mision__imagen {
@@ -1123,9 +1123,11 @@ aside[class=aside] {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 
-  background: url('img/niños.jpg');
+  background: url('img/niñosDos.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  filter: contrast(1.4) brightness(.9);
 }
 
 
@@ -1135,7 +1137,7 @@ aside[class=aside] {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 
-  background: url('img/preadolescente.jpg');
+  background: url('img/aby.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: center;
@@ -2002,6 +2004,7 @@ section .map {
   .article__card {
     max-width: 600px;
     width: 95%;
+    height: 18em;
     padding: 34px;
   }
 
@@ -2033,7 +2036,7 @@ section .map {
     animation-duration: .8s;
     animation-iteration-count: infinite;
     animation-play-state: running;
-   
+
   }
 
   @keyframes flecha {
@@ -2126,9 +2129,10 @@ section .map {
     flex-direction: column;
     margin: 0 auto;
     padding: 1.5em;
-
-    background: url(img/alabanza3.jpg) no-repeat center center;
+    background: url(img/alabanza3.jpg) no-repeat center center;background-size: cover;
+    background-attachment: fixed;
   }
+
 
   .mision::before {
     width: 100%;
@@ -2139,7 +2143,7 @@ section .map {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(52, 152, 219, 0.8);
+    background: rgba(52, 152, 219, .8);
     z-index: 0;
   }
 
@@ -2369,7 +2373,7 @@ section .map {
 
 
 
-  /* Modal niños */
+  /* Modal jovenes */
   .popup__img {
     background-image: url(img/jovenes\(nuevo\).jpg);
   }
