--- a/style.css
+++ b/style.css
@@ -252,9 +252,6 @@ aside[class=aside] {
   background: url('img/pastor\ javier\ corsi\ dos.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 0px;
-  background-position-y: 5em;
-  background-attachment: fixed;
   grid-area: main;
   position: relative;
   display: flex;
@@ -741,6 +738,7 @@ aside[class=aside] {
   width: 600px;
   z-index: 9;
   overflow: hidden;
+  position: relative;
 
 }
 
@@ -748,6 +746,29 @@ aside[class=aside] {
   margin-bottom: 50px;
 }
 
+
+/* texto descontracturado */
+
+.t-stroke {
+  position: absolute;
+  top: 30%;
+  left: 5%;
+  color: transparent;
+  -moz-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 2px;
+  -moz-text-stroke-color: #000000;
+  -webkit-text-stroke-color: #ffffff;
+}
+
+h5 {
+  font-size: 120px;
+  line-height: 80px;
+
+}
+
+.t-shadow {
+  text-shadow: 7px 7px var(--color-uno);
+}
 
 /*Precursores (Videos de Youtube*/
 .aside {
@@ -1847,6 +1868,24 @@ section .map {
     padding: 0;
   }
 
+
+  .main {
+    width: 100%;
+    height: 600px;
+    background: url('img/pastor\ javier\ corsi\ dos.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: -90px;
+    background-position-y: 80px;
+    grid-area: main;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .main__social {
     display: none;
   }
@@ -2082,7 +2121,33 @@ section .map {
   }
 
   .mision__imagen {
-    display: none;
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  /* texto descontracturado */
+
+  .t-stroke {
+    position: absolute;
+    top: 30%;
+    left: 0;
+    color: transparent;
+    -moz-text-stroke-width: 2px;
+    -webkit-text-stroke-width: 2px;
+    -moz-text-stroke-color: #000000;
+    -webkit-text-stroke-color: #ffffff;
+  }
+
+  h5 {
+    font-size: 90px;
+    line-height: 60px;
+
+  }
+
+  .t-shadow {
+    text-shadow: 7px 7px var(--color-uno);
   }
 
   /*Precursores (Videos de Youtube*/
