--- a/style.css
+++ b/style.css
@@ -51,65 +51,23 @@ section[id] {
 .loader__contenedor {
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  background-color: #74EBD5;
+  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 99999;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
 
 .loader__texto {
   display: block;
-  color: black;
+  color: white;
   font-family: monospace;
-  font-size: 8px;
-  white-space: nowrap;
-  border-right: 4px solid;
-  width: 30ch;
-  animation: typing 2s steps(12), blink .5s infinite step-end alternate;
-  overflow: hidden;
-}
-
-@keyframes move {
-  0% {
-    scale: 1;
-  }
-
-  50% {
-    scale: .8;
-  }
-
-  100% {
-    scale: 1;
-  }
-
-}
-
-.loader__imagen {
-  width: 70px;
-  height: auto;
-  z-index: 99999;
-  animation: move 2s ease-in-out infinite;
-  -webkit-animation: move 2s ease-in-out infinite;
-}
-
-.loader__texto {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 10px;
-  color: black;
-}
-
-
-.loader__texto {
-  display: block;
-  color: black;
-  font-family: monospace;
-  font-size: 13px;
+  font-size: 25px;
   white-space: nowrap;
   border-right: 4px solid;
   width: 30ch;
@@ -1775,9 +1733,8 @@ section .map {
   }
 
   /*Loader*/
-  .loader__imagen {
-    width: 80px;
-    margin-bottom: 20px;
+  .loader__texto{
+    font-size: 10px;
   }
 
   .contenedor {
